# workforce-utils

./: .gitignore  Cargo.toml  README.md  schedule.json
chrome/: background.js  download.html  manifest.json  script.js
src/: lib.rs
workforce-cli/: Cargo.toml
workforce-cli/src/: lib.rs
workforce-rs/: Cargo.toml
workforce-rs/src/: build_calander.rs  lib.rs
