[package]
name = "workforce-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
simple-log = "1.6.0"
anyhow = "1"
serde_json = "1"
log = "0.4"
workforce-rs = { path = "../workforce-rs" }
[[bin]]
name = "schedule_converter"
[[bin]]
name = "share_text"